Nueva funcionalidad - Generar dump solo de inventario}